<resources>

    <string name="app_name">FakeCall</string>
    <string name="Name">Name</string>
    <string name="PhoneNumber">Phone</string>
    <string name="btnSend">預覽</string>
    <string name="btnSet">完成設定</string>
    <string name="menu_settings">menu_settings</string>

    <style name="AppTheme" parent="AppTheme"></style>

    <string name="title_activity_main">FAKE CALLER</string>
    <string name="txtContactName">Abby</string>
    <string name="common_ok">Ok</string>
    <string name="common_back">Back</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_save">Save</string>
    <string name="common_none">None</string>
    <string name="common_send">Send</string>
    <string name="common_coming_soon">Coming soon !</string>
    <string name="call_created">Call scheduled at 13h37</string>
    <string name="main_call_type">Call type</string>
    <string name="main_call_duration">Call duration</string>
    <string name="main_secondary_settings">Secondary settings</string>
    <string name="main_activation_settings">Activation settings</string>
    <string name="main_specific_settings">Specific settings</string>
    <string name="main_create_call">Create call</string>
    <string name="main_vibrate_on_call">Vibrate on call</string>
    <string name="main_vibrate_on_activation">Vibrate on activation</string>
    <string name="main_activation_time">Activation time</string>
    <string name="main_max_ring_time">Max ring time</string>
    <string name="main_enable_call_log">Enable call log</string>
    <string name="main_enable_call_notification">Enable call notification</string>
    <string name="contact_unknown">Unkown caller</string>
    <string name="contact_title">Contact</string>
    <string name="contact_name">Name</string>
    <string name="contact_phone">Phone number</string>
    <string name="contact_pick">Contacts</string>
    <string name="conversation_title">Conversations</string>
    <string name="conversation_record">Record</string>
    <string name="conversation_recording">Recording</string>
    <string name="conversation_name">Name of the record</string>
    <string name="conversation_delete">Long touch on a track to delete it</string>
    <string name="conversation_delete_comfirmation">Are you sure you want to delete this track ?</string>
    <string name="conversation_delete_not_able">You can not delete this track.</string>
    <string name="ringtone_choose">Select a ringtone</string>
    <string name="schedule_choose">Choose the call moment</string>
    <string name="schedule_custom">Custom</string>
    <string name="schedule_need_activation">Need activation</string>
    <string name="schedule_now">Now</string>
    <string name="schedule_10seconds">in 10 seconds</string>
    <string name="schedule_30seconds">in 30 seconds</string>
    <string name="schedule_1minute">in 1 minute</string>
    <string name="schedule_5minutes">in 5 minutes</string>
    <string name="schedule_10minutes">in 10 minutes</string>
    <string name="schedule_30minutes">in 30 minutes</string>
    <string name="schedule_1hour">in 1 hour</string>
    <string name="schedule_2hours">in 2 hours</string>
    <string name="schedule_5hours">in 5 hours</string>
    <string name="activation_short">Activation</string>
    <string name="activation_choose">Choose an activation type</string>
    <string name="activation_proximity">Proximity</string>
    <string name="activation_turn">Turn phone</string>
    <string name="activation_shake">Shake phone</string>
    <string name="activation_time_choose">Time after user activation before showing call screen</string>
    <string name="activation_time_0_seconds">Instantly</string>
    <string name="activation_time_5_seconds">5 seconds</string>
    <string name="activation_time_10_seconds">10 seconds</string>
    <string name="activation_time_30_seconds">30 seconds</string>
    <string name="activation_time_1_minute">1 minute</string>
    <string name="ring_time_choose">Max ring time before close screen</string>
    <string name="screen_title">Call screen</string>
    <string name="help_title">Help</string>
    <string name="help_page1_title">1 - Call type</string>
    <string name="call_type_incoming">Incoming call</string>
    <string name="call_type_outgoing">Outgoing call</string>
    <string name="call_type_missed">Missed call</string>
    <string name="notification_missed_call">Missed call</string>
    <string name="incall_answer">接聽</string>
    <string name="incall_decline">拒接</string>
    <string name="incall_speaker">Speaker</string>
    <string name="incall_headset">Headset</string>
    <string name="incall_dialpad">Dialpad</string>
    <string name="incall_add_call">Add call</string>
    <string name="incall_mute">Mute</string>
    <string name="incall_incoming_call">來電</string>
    <string name="incall_endcall">結束通話</string>
    <string name="settings_community_more_apps">More apps</string>
    <string name="settings_community_change_log">Change log</string>
    <string name="settings_community_thanks">Thanks</string>
    <string name="share_intent_title">Share the application</string>
    <string name="share_subject">Sharing the application Whoopee Cushion</string>
    <string name="share_body">Hello, I would like to share with you this application:</string>
    <string name="toast_error_unexpected">Sorry, an unexpected error occured</string>
    <string name="toast_message_sent">Your message has been sent</string>
    <string name="toast_billing_not_available">Sorry, your phone does not support in-app billing</string>
    <string name="toast_billing_remove_ads_done">Congratulations, you just removed ads in the app !</string>
    <string name="toast_billing_remove_ads_already">You already removed ads in the app !</string>
    <string name="billing_remove_ads">Remove ads</string>
    <string name="version_name">1.0.12</string>
    <string name="email_value">mdbsoftwares@gmail.com</string>
    <string name="author_value">MDB Softwares</string>
    <string name="package_name">com.mdb.android.fakecall</string>
    <string name="app_analytics">UA–19540215–27</string>
    <string name="app_ads">a14f883981aff47</string>
    <string name="app_lb_ads">586706286</string>
    <string name="btnRingtonePick">選鈴聲</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_htcsense_2_2_speaking">HTCSense_2_2_speaking</string>
    <string name="btnContact">插入聯絡人</string>
    <string name="btnPhoto">自選圖片</string>
    <string name="CallSetButtonText">來電設定</string>
    <string name="ActiviteButtonText">啟動服務</string>

</resources>